Remove internal hashing of externalNullifier

--- a/packages/contracts/snarkjs-templates/verifier_groth16.sol.ejs
+++ b/packages/contracts/snarkjs-templates/verifier_groth16.sol.ejs
@@ -16,7 +16,7 @@
 //       make Pairing strict
 //
 // SPDX-License-Identifier: GPL-3.0
-pragma soliditypragma solidity ^0.8.4;
+pragma solidity ^0.8.4;
 
 library Pairing {
   error InvalidProof();
